--- a/client/index.html
+++ b/client/index.html
@@ -22,13 +22,13 @@
                 <span onclick="document.getElementById('login-pop').style.display='none'" class="w3-button w3-xlarge w3-hover-red w3-display-topright" title="Close Modal">&times;</span>
               </div>
         
-              <form class="w3-container" action="/action_page.php">
+              <form class="w3-container">
                 <div class="w3-section">
                   <h2>Login</h2>
                   <label><b>Username</b></label>
-                  <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
+                  <input id="login-u" class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
                   <label><b>Password</b></label>
-                  <input class="w3-input w3-border w3-margin-bottom" type="password" placeholder="Enter Password" name="psw" required>
+                  <input id="login-p" class="w3-input w3-border w3-margin-bottom" type="password" placeholder="Enter Password" name="psw" required>
                   <button id="login-btn" class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
                 </div>
               </form>
@@ -103,11 +103,12 @@
 
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
-        const socket = io.connect("ws://localhost:5001");
+        const socket = io.connect("ws://192.168.43.44:5001",{auth: {token: ""}});
 
         document.getElementById("login-btn").addEventListener('click',()=>{
-            const username = document.getElementById("u-box").value;
-            const password = document.getElementById("p-box").value;
+            const username = document.getElementById("login-u").value;
+            const password = document.getElementById("login-p").value;
+            console.log(username)
             if(username&&password){
                 socket.emit('login',username,password,(response)=>{
                 if(response.status == 200){
@@ -235,6 +236,18 @@
             };
         }
 
+        var users;
+        socket.emit('getUsers',(response)=>{
+            users = response;
+            const token = document.getElementById("t-box").value;
+            socket.emit('getGroups',token,(response)=>{
+                 console.log(response);
+                 console.log(users);
+            });         
+        });
+
+        console.log(users)
+
         renderLobby([{
             name: "group1"
         }, {
@@ -245,13 +258,7 @@
             name: "group4"
         }, {
             name: "group5"
-        }], [{
-            username: "user1"
-        }, {
-            username: "user2"
-        }, {
-            username: "user3"
-        }]);
+        }], users);
 
         // chat zone
         var my_id = "test1"
