--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,9 @@
 
     </div>
     <div id="chat-panel" class="w3-border">
-        <div id="lobby"></div>
+        <div id="lobby-container">
+            <div id="lobby"></div>
+        </div>
         <div id="message">
             <div id="display-message" class="w3-padding"></div>
             <div id="message-bottom" class="w3-padding w3-border-top">
