Remove sending direct message to self

--- a/client/index.html
+++ b/client/index.html
@@ -153,6 +153,7 @@
 
         var users;
         var groups;
+        var current_user_id;
         var current_reciever_id;
         var current_direct = false;
 
@@ -162,6 +163,7 @@
             if(username&&password){
                 socket.emit('login',username,password,(response)=>{
                 if(response.status == 200){
+                    current_user_id = response.auth.userId;
                     localStorage.setItem("t-box", response.auth.token);
 
                     to_login_btn.style.display = "none";
@@ -418,6 +420,7 @@
             lobby_zone.appendChild(create_group_button);
 
             for(let idx_user in userData) {
+                if (current_user_id == userData[idx_user].userId) continue;
                 let user_box = document.createElement("button");
                 let user_name = document.createElement("span");
                 user_name.textContent = userData[idx_user].nickname ;
