--- a/client/index.html
+++ b/client/index.html
@@ -327,7 +327,17 @@
             const token = localStorage.getItem("t-box");
             const rec = current_reciever_id;
             const message = document.getElementById("ms-box").value;
-            console.log(token, current_direct, rec, message);
+            document.getElementById("ms-box").value = "";
+            for (let idx_user in users) {
+                if (users[idx_user].userId == current_user_id) {
+                    renderChat([{
+                        message: message,
+                        sender: users[idx_user].nickname
+                    }]);
+                    break;
+                }
+            }
+            
             socket.emit("sendMessage",token,current_direct,rec,message,(response)=>{
                 console.log('sendMessage',response);
             });
