--- a/client/index.html
+++ b/client/index.html
@@ -120,6 +120,7 @@
           </div>
         </div>
 
+        <label id="chat-name" class="w3-right">Welcome to our chat!!!</label>
     </div>
     <div id="chat-panel" class="w3-border">
         <div id="lobby-container">
@@ -151,6 +152,7 @@
         var to_login_btn = document.getElementById("to-login-btn");
         var to_regist_btn = document.getElementById("to-regist-btn");
 
+        var chatName = document.getElementById("chat-name")
         var users;
         var groups;
         var current_reciever_id;
